[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/SettingsUI.gd" type="Script" id=1]
[ext_resource path="res://media/main.theme" type="Theme" id=2]

[node name="Settings" type="CanvasLayer"]
unique_name_in_owner = true
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_right = 210.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.5
margin_top = 15.0
margin_right = 109.5
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="Menu" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 80.0
margin_right = 150.0
margin_bottom = 467.0

[node name="Fullscreen" type="CheckButton" parent="Panel/Menu"]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 53.0
theme = ExtResource( 2 )
text = "Fullscreen"

[node name="Resolution" type="OptionButton" parent="Panel/Menu"]
unique_name_in_owner = true
margin_top = 57.0
margin_right = 300.0
margin_bottom = 108.0
theme = ExtResource( 2 )
text = "Resolution"

[node name="Locale" type="OptionButton" parent="Panel/Menu"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 300.0
margin_bottom = 163.0
theme = ExtResource( 2 )
text = "Language"

[node name="Control" type="VBoxContainer" parent="Panel/Menu"]
margin_top = 167.0
margin_right = 300.0
margin_bottom = 201.0

[node name="Label" type="Label" parent="Panel/Menu/Control"]
margin_right = 300.0
margin_bottom = 14.0
text = "Main"

[node name="VolumeMain" type="HSlider" parent="Panel/Menu/Control"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 300.0
margin_bottom = 34.0
max_value = 1.0
step = 0.1

[node name="Control2" type="VBoxContainer" parent="Panel/Menu"]
margin_top = 205.0
margin_right = 300.0
margin_bottom = 239.0

[node name="Label" type="Label" parent="Panel/Menu/Control2"]
margin_right = 300.0
margin_bottom = 14.0
text = "Music"

[node name="VolumeMusic" type="HSlider" parent="Panel/Menu/Control2"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 300.0
margin_bottom = 34.0
max_value = 1.0
step = 0.1

[node name="Control3" type="VBoxContainer" parent="Panel/Menu"]
margin_top = 243.0
margin_right = 300.0
margin_bottom = 277.0

[node name="Label" type="Label" parent="Panel/Menu/Control3"]
margin_right = 300.0
margin_bottom = 14.0
text = "Sound"

[node name="VolumeSound" type="HSlider" parent="Panel/Menu/Control3"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 300.0
margin_bottom = 34.0
max_value = 1.0
step = 0.1

[node name="Close" type="Button" parent="Panel/Menu"]
unique_name_in_owner = true
margin_top = 281.0
margin_right = 300.0
margin_bottom = 332.0
theme = ExtResource( 2 )
text = "Close"

[node name="Quit" type="Button" parent="Panel/Menu"]
unique_name_in_owner = true
margin_top = 336.0
margin_right = 300.0
margin_bottom = 387.0
theme = ExtResource( 2 )
text = "Quit game"
